# Match40

./: .gitignore  ArgParse.hs  Auth.hs  Command40.hs  Course.hs  CourseMail.hs  DB.hs  Decimal.hs  DigitList.hs  Email.hs  Identity.hs  Invitation.hs  InvitationActions.hs  Main.hs  OldState.hs  Permissions.hs  Policy.hs  README  Server.hs  State.hs  Student.hs  ToyRoster.hs  ToyServer.lhs  Types.hs  Updates.hs  User.hs  WordList.hs  match40.cabal  mkfile
Pages/: AppTemplate.hs  Components.hs  Login.hs  Private.hs  Public.hs  User.hs
obsolete/: Main.hs
