Name:                match40
Version:             0.1
Synopsis:            Find a partner!
Category:            Courseware
Build-type:          Simple
Cabal-version:       >=1.2

Executable testbench
  Main-is:           Main.hs
  Build-depends:     base,
                     process,
                     containers,
                     time,
                     filepath,
                     directory,
                     random,
                     happstack-server (>=7.0.1),
                     bcrypt (>=0.0.3),
                     safecopy (>=0.6.1),
                     acid-state (>=0.6.3)

