Name:                match40
Version:             0.1
Synopsis:            Find a partner!
Category:            Courseware
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Build-depends:     base,
                     process,
                     containers,
                     time,
                     filepath,
                     directory,
                     random,

                     acid-state (>=0.6.3),
                     bytestring (>=0.9),
                     bcrypt (>=0.0.3),
                     safecopy (>=0.6.1),
                     time == 1.2.*,
                     unix ==2.4.*

Executable match40
  Main-is:           Command40.hs
  Build-depends:     base,
                     process,
                     containers,
                     time,
                     filepath,
                     directory,
                     random,

                     acid-state (>=0.6.3),
                     bytestring (>=0.9),
                     bcrypt (>=0.0.3),
                     mtl >= 2.0,
                     network == 2.3.*,
                     safecopy (>=0.6.1),
                     time == 1.2.*,
                     unix ==2.4.*

Executable server40
  Main-is:           ToyServer.lhs
  Build-depends:     base, 
                     process,
                     containers,
                     time,
                     filepath,
                     directory,
                     random,

                     acid-state (>=0.6.3),
                     blaze-html, blaze-markup,
                     bytestring (>=0.9),
                     bcrypt (>=0.0.3),
                     entropy,
                     happstack-server == 7.0.*,
                     happstack-lite == 7.2.*,
                     mtl >= 2.0,
                     network == 2.3.*,
                     safecopy (>=0.6.1),
                     transformers (>=0.2.2),
                     text == 0.11.*,
                     time == 1.2.*,
                     unix ==2.4.*

